src/styles/style.css
/* ... */
.menu-wrap .toggler:checked ~ .menu {
  visibility: visible;
}

.menu-wrap .toggler:checked ~ .menu > div {
  -webkit-transform: scale(1);
          transform: scale(1);
  -webkit-transition-duration: 0.75s;
          transition-duration: 0.75s;
}

.menu-wrap .toggler:checked ~ .menu > div > div {
  opacity: 1;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
}

.menu-wrap .menu {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  visibility: hidden;
  overflow: hidden;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.menu-wrap .menu > div {
  background: #041b2d;
  border-radius: 50%;
  width: 200vw;
  height: 200vw;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
      -ms-flex: none;
          flex: none;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-transform: scale(0);
          transform: scale(0);
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
}

.menu-wrap .menu > div > div {
  text-align: center;
  max-width: 90vw;
  max-height: 100vh;
  opacity: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
}

.menu-wrap .menu > div > div > ul > li {
  list-style: none;
  color: #428cd4;
  font-size: 1.5rem;
  padding: 1rem;
}

.menu-wrap .menu > div > div > ul > li > a {
  color: inherit;
  text-decoration: none;
  -webkit-transition: color 0.4s ease;
  transition: color 0.4s ease;
}

html {
  background-color: #041b2d;
  font-family: "Lato", sans-serif;
}

h1,
h2,
h3,
h4 {
  color: white;
}

nav {
  color: #ff9cda;
}

i,
a {
  color: #428cd4;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  cursor: pointer;
}

p {
  color: #ff9cda;
}

footer p {
  color: white;
}

body {
  margin: 0;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  text-align: center;
}

/* EVERYTHING MOBILE */
@media screen and (max-width: 767px) {
  .menu-wrap .menu > div > div > ul {
    padding-left: 0;
  }
  nav {
    height: 10vh;
  }
  main {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .content-title-wrap {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    font-size: 9vw;
    margin: 1rem;
    top: -10vh;
  }
  .content-title-wrap .first-name {
    top: 0.9em;
    margin: 0;
    position: relative;
  }
  .content-title-wrap .last-name {
    position: relative;
    margin: 0;
    -webkit-writing-mode: vertical-lr;
        -ms-writing-mode: tb-lr;
            writing-mode: vertical-lr;
    white-space: nowrap;
    left: -3.5em;
  }
  .content-title-wrap .linkedin-icon {
    position: relative;
    left: -9em;
    top: 8em;
  }
  .content-title-wrap .github-icon {
    position: relative;
    left: -9em;
    top: 8em;
  }
  .content-title-wrap .content-text-wrap {
    position: absolute;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    top: 30vw;
    left: 25vw;
    font-size: 5vw;
    width: 60vw;
    margin-bottom: 2rem;
  }
  .content-title-wrap .content-text-wrap .content-title {
    margin-bottom: 0;
  }
  .content-title-wrap .content-text-wrap p {
    margin-bottom: 0.5rem;
  }
  .content-title-wrap .content-text-wrap .article-title {
    margin-bottom: 0;
  }
  .content-title-wrap .content-text-wrap .article-preview {
    margin: 0;
  }
  .content-title-wrap .content-text-wrap .article-date {
    margin: 0;
  }
  .content-title-wrap .content-text-wrap .content-social-wrap {
    font-size: 11vw;
  }
  .title-wrap {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    font-size: 11vw;
    margin: 1rem;
    top: 10vh;
  }
  .title-wrap .first-name {
    top: 0.9em;
    margin: 0;
    position: relative;
  }
  .title-wrap .last-name {
    position: relative;
    margin: 0;
    -webkit-writing-mode: vertical-lr;
        -ms-writing-mode: tb-lr;
            writing-mode: vertical-lr;
    white-space: nowrap;
    left: -3.5em;
  }
  .title-wrap .content-text-wrap {
    position: absolute;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    top: 40vw;
    left: 30vw;
    font-size: 7vw;
    width: 60vw;
  }
  .title-wrap .content-text-wrap p {
    margin-bottom: 0.5rem;
  }
  .title-wrap .content-text-wrap .content-social-wrap {
    font-size: 11vw;
  }
}
/* ... */

